<resources>
    <string name="app_name">Dark</string>
    <string name="btlogin">Login</string>
    <string name="btcadastrar">Cadastrar</string>
    <string name="etnome">Nome:</string>
    <string name="etemail">E-mail:</string>
    <string name="etsenha">Senha:</string>
    <string name="etconfisenha">Confirmar Senha:</string>
    <string name="etidade">Idade:</string>
    <string name="rbmasculino">Masculino</string>
    <string name="rbfeminino">Feminino</string>
    <string name="tvescolha">Em Que Você Tem Interesse?</string>
    <string name="cbpersonagens">Personagens</string>
    <string name="cbparadoxos">Paradoxos</string>
    <string name="cblinha">Linha do Tempo</string>
    <string name="cbarvore">Árvore Genealógica</string>
    <string name="tvtitulo">Preencha Para Cadastrar</string>
    <string name="btfinalizar">Cadastrar</string>
    <string name="btlimpar">Limpar</string>
    <string name="tvdados">Seus Dados</string>
    <string name="tvfrase">Sic Mundus Creatus Est</string>
    <string name="tvfrase7">Erit Lux</string>
    <string name="tvfrase2">“O começo é o fim. E o fim é o começo. Tudo está conectado. Futuro, passado e presente.”</string>
    <string name="tvrespostanome" />
    <string name="tvrespostaidade" />
    <string name="tvrespostaemail" />
    <string name="tvrespostasenha" />
    <string name="tvrespostaconfisenha" />
    <string name="tvrespostagenero" />
    <string name="tvrespostapersonagens" />
    <string name="tvrespostaparadoxos" />
    <string name="tvrespostalinha" />
    <string name="tvrespostaarvore" />
    <string name="tvfrase3">“A diferença entre passado, presente e futuro é somente uma persistente ilusão.” - Albert Einstein</string>
    <string name="btcerto">Está tudo certo? Clique aqui e faça login</string>
    <string name="tvlogin">Insira Seus Dados Para o Login</string>
    <string name="etemaillog">E-mail:</string>
    <string name="etsenhalog">Senha:</string>
    <string name="btlog">Login</string>
    <string name="tvfrase4">“O que nós sabemos é uma gota. O que ignoramos, um oceano.” - Isaac Newton</string>
    <string name="tvpersonagens">Personagens</string>
    <string name="tva">Mundo do Adam</string>
    <string name="tvb">Mundo da Eva</string>
    <string name="tvori">Mundo Original</string>
    <string name="menuarvore">Árvore Genealógica</string>
    <string name="menuinicial">Início</string>
    <string name="menuparadoxos">Paradoxos</string>
    <string name="menupersonagens">Personagens</string>
    <string name="tvarvore">Árvore Genealógica</string>
    <string name="tvapresentacao">A série se passa na cidade fictícia de Winden, na Alemanha, que sofre o impacto do desaparecimento de uma criança, que expõe os segredos e as conexões ocultas entre quatro famílias locais, enquanto elas lentamente desvendam uma sinistra conspiração de viagem no tempo que abrange várias gerações. Ao longo da série, Dark explora as implicações existenciais do tempo e seus efeitos sobre a natureza humana.
        Nesse aplicativo você pode ver, na seção Paradoxos um pouco dos complexos paradoxos da série, como: Charlotte sendo filha da sua própria filha e como Jonas é bisavô do seu próprio avô. Na seção Personagens, você pode conhecer um pouco sobre cada um deles, dos três mundos da série. Já na seção da Árvore Genealógica você pode ver como as quatro famílias de Winden se entrelaçam e entender a confusa ligação de cada um em meio a tantas viagens no tempo.</string>
    <string name="btstop">Parar a música</string>
    <string name="tvparadoxos">Paradoxos</string>
    <string name="tvparadoxo1">Jonas Sendo Bisavô Do Seu Próprio Avô</string>
    <string name="tvparadoxo2">Charlotte Sendo Filha Da Sua Própria Filha</string>
    <string name="tvfrase5">“Os mortos nunca estão verdadeiramente mortos. Talvez eles não estejam aqui agora. Mas tudo que viveu vive para sempre na eternidade do tempo.” - Heinrich Tannhaus</string>
    <string name="tvfrase6">“Esteja em guarda! Esteja atento! Você não sabe quando essa hora chegará.” - Hermann Albers</string>
    <string name="btdados">Visualizar Dados</string>
    <string name="btsic">Sic Mundus Creatus Est</string>
    <string name="bterit">Erit Lux</string>
    <string name="tvsic">Sic Mundus Creatus Est</string>
    <string name="txtsic">Sic Mundus foi fundado no século 19 por Heinrich Tannhaus, que desejava encontrar uma maneira de trazer sua esposa morta, Charlotte, de volta à vida.
        Em 1888, o filho de Heinrich, Gustav, era o único membro remanescente até que Jonas (adulto), Franziska Doppler, Magnus Nielsen e Bartosz Tiedemann apareceram, tendo viajado no tempo exatamente quando o apocalipse aconteceu em 2020.
        Em 1921, Adam se tornou o líder e seus seguidores trabalham na escavação da passagem de viagem no tempo nas cavernas de Winden.
        No entanto, em 1987, Sic Mundus havia abandonado sua sede subterrânea e o trio Desconhecido/Infinito invade e rouba os planos da máquina do tempo antes de colocar fogo no local.
        Em 2052, Sic Mundus ainda existe e habitantes pós-apocalípticos de Winden liderados por Elisabeth Doppler veneram a sociedade, acreditando que o grupo é a sua salvação e os levará ao paraíso.
        Em 2053, Adam envia seus seguidores mais uma vez através do tempo e do espaço para que tudo aconteça como deveria na esperança de desatar o nó.</string>
    <string name="txtsic2">Membros: Adam (líder), Agnes Nielsen, Bartosz Tiedemann, Charlotte Doppler, Cláudia Tiedemann, Elisabeth Doppler, Franziska Doppler, Gustav Tannhaus, Hanno Tauber/Noah, Heinrich Tannhaus (fundador), Leopold Tannhaus, Magnus Nielsene e Silja Tiedemann.</string>
    <string name="tverit">Erit Lux</string>
    <string name="txterit">Erit Lux é uma sociedade secreta de viajantes do tempo em Winden no mundo de Eva, liderada por Eva. Eles são a contraparte de Sic Mundus no mundo de Adam e acreditam que estão na luz, enquanto Sic Mundus está nas sombras.
        Enquanto Adam tenta acabar com os dois mundos, Eva deseja preservar o loop temporal.
        No dia do apocalipse 8 de Novembro de 2019 no Mundo de Eva, Eva envia os membros da Erit Lux em suas missões para sustentar o nó que deu a todos eles vida.</string>
    <string name="txterit2">Membros: Bartosz Tiedemann (adulto), Bartosz Tiedemann (jovem), Cláudia Tiedemann (infiltrada do mundo do Adam), Cláudia Tiedemann (adulta), Desconhecido/Infinito (trio), Egon Tiedemann (idoso), Eva (fundadora e líder), Martha Nielsen (adulta), Martha Nielsen (jovem), Noah (adulto) e Noah (jovem).</string>
    <string name="tvagnesa">Agnes Nielsen</string>
    <string name="tvbartosz">Bartosz Tiedemann</string>
    <string name="tvbernadettebenjamina">Benjamin/Bernadette Wöller</string>
    <string name="tvbernda">Bernd Doppler</string>
    <string name="tvborisaleksandera">Boris Niewald/Aleksander Köhler - Tiedemann</string>
    <string name="tvcharlottea">Charlotte Doppler</string>
    <string name="tvclaudiaa">Cláudia Tiedemann</string>
    <string name="tvclausena">Clausen Köhler</string>
    <string name="tvdaniela">Daniel Kahnwald</string>
    <string name="tvdesconhecidoinfinito">Desconhecido/Infinito</string>
    <string name="tvdorisa">Doris Tiedemann</string>
    <string name="tvegona">Egon Tiedemann</string>
    <string name="tvelisabetha">Elisabeth Doppler</string>
    <string name="tvfranziskaa">Franziska Doppler</string>
    <string name="tvgretaa">Greta Doppler</string>
    <string name="tvgustava">Gustav Tannhaus</string>
    <string name="tvhga">H. G. Tannhaus</string>
    <string name="tvhannaha">Hannah Kahnwald</string>
    <string name="tvhannonoaha">Hanno Tauber/Noah</string>
    <string name="tvheinricha">Heinrich Tannhaus</string>
    <string name="tvhelenea">Helene Albers</string>
    <string name="tvhelgea">Helge Doppler</string>
    <string name="tvhermanna">Hermann Albers</string>
    <string name="tvinesa">Inês Kahnwald</string>
    <string name="tvjanaa">Jana Nielsen</string>
    <string name="tvjonasadam">Jonas Kahnwald/Adam</string>
    <string name="tvkatharinaa">Katharina Nielsen</string>
    <string name="tvmadsa">Mads Nielsen</string>
    <string name="tvmagnusa">Magnus Nielsen</string>
    <string name="tvmarthaa">Martha Nielsen</string>
    <string name="tvmikkelmichaela">Mikkel Nielsen/Michael Kahnwald</string>
    <string name="tvpetera">Peter Doppler</string>
    <string name="tvreginaa">Regina Tiedemann</string>
    <string name="tvsebastiana">Sebastian Krüger</string>
    <string name="tvsiljaa">Silja Tiedemann</string>
    <string name="tvtorbena">Torben Wöller</string>
    <string name="tvtrontea">Tronte Nielsen</string>
    <string name="tvulricha">Ulrich Nielsen</string>
    <string name="txtagnesa">Agnes é filha de Silja e Bartosz, mãe de Tronte Nielsen junto com o Desconhecido/Infinito. Ela se muda para Winden com seu filho em 1953, ficando amiga de sua senhoria Doris Tiedemann, com quem eventualmente desenvolve um relacionamento romântico.
        Na segunda temporada, descobrimos que Agnes é irmã de Hanno Tauber, que passou a se identificar como "Noah" desde que começou a trabalhar para o misterioso Adam. Ela também faz parte do grupo de viajantes do tempo Sic Mundus, mas encontrava-se exilida da equipe em 1953, por motivos ainda não revelados.
        Após entregar a versão idosa de Cláudia para Noah, ela volta às graças de Adam e retorna ao grupo em 1921.</string>
    <string name="txtbartosz">Bartosz é filho de Aleksander e Regina e tem dois filhos com Silja, Hanno (Noah) e Agnes. Ele é o melhor amigo de Jonas e também gosta de Martha. Os dois chegam a namorar, mas Martha acaba o traindo com Jonas.
        Antes disso, Bartosz havia encontrado Noah, que contou diversas coisas que aconteceriam no futuro, inclusive sobre a traição. Bartosz acaba trabalhando para Noah, mas é descoberto pelos outros jovens.
        Quando Jonas adulto salva Bartosz, Magnus e Franziska do apocalipse, ele acaba ficando preso em 1888 seguindo Jonas e, consequentemente, Adam. Bartosz acaba sendo morto por seu filho, Noah.</string>
    <string name="txtbernadettebenjamina">Bernadette é irmã de Torben Wöller.
        Ela é uma mulher trans e profissional do sexo, ela atendia clientes em um trailer na beira da estrada, tendo um caso com Peter Doppler. Na segunda temporada, Franziska Doppler fornece hormônios para a terapia de reposição hormonal de Bernadette, já que o pai, que costumava fornecê-los, havia parado de visitá-la.</string>
    <string name="txtbernda">Bernd é esposo de Greta, pai de Helge e dono da usina. É ele quem a constrói, em 1953. Em 1986, é um dos responsáveis por nomear Cláudia como a nova diretora. Bernd sabe sobre o material radioativo e a Partícula de Deus. Ele conta tudo a Cláudia e pede que, enquanto estiver vivo, isso não seja divulgado para evitar queimar o nome de sua família.
        Bernd acaba sendo morto pelo Desconhecido/Infinito.</string>
</resources>