<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaSicMundus">

    <ScrollView
        android:id="@+id/svsic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <LinearLayout
            android:id="@+id/lvsic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <TextView
                android:id="@+id/tvsic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/tvsic"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <ImageView
                android:id="@+id/imgsic"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:srcCompat="@drawable/sic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <TextView
                android:id="@+id/txtsic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/txtsic"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/txtsic2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/txtsic2"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>